test/loop/confidence/errors/group_errors_1.loop
# Errors in pattern matching functions

func() ->
  (->

